--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,8 @@ html, body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  /*todo: remove*/
+  background-color: cyan;
 }
 
 /* Angular Material Theme Custom Properties */
